--- a/sitio-web/board-page/index-board.html
+++ b/sitio-web/board-page/index-board.html
@@ -12,24 +12,26 @@
 <body class="page__container">
     <header class="header__container">
         <img class="main-logo" src="../home-page/assets/img/logo.svg" alt="Html & CSS logo"></img>
-        <ul class="menu-bar__list">
-            <li><a class="menu-bar--item" href="#">HOME</a></li>
-            <li><a class="menu-bar--item" href="#">BOARD</a></li>
-            <li><a class="menu-bar--item" href="#">CONTACTO</a></li>
-        </ul>
-        <div class="logos__container">
-            <img class="logo logo--facebook" src="../home-page/assets/img/fb-logo.png" alt="Facebook logo">
-            <img class="logo logo--twitter" src="../home-page/assets/img/twit-logo.png" alt="Twitter logo">
-            <img class="logo logo--youtube" src="../home-page/assets/img/yt-logo.png" alt="Youtube logo">
-            <img class="logo logo--instagram" src="../home-page/assets/img/inst-logo.png" alt="Instagram logo">
-        </div>
+        <nav class="nav__container">
+            <ul class="menu-bar__list">
+                <li><a class="menu-bar__item" href="#">HOME</a></li>
+                <li><a class="menu-bar__item" href="#">BOARD</a></li>
+                <li><a class="menu-bar__item" href="#">CONTACTO</a></li>
+            </ul>
+            <div class="logos__container">
+                <img class="logo logo--facebook" src="../home-page/assets/img/fb-logo.png" alt="Facebook logo">
+                <img class="logo logo--twitter" src="../home-page/assets/img/twit-logo.png" alt="Twitter logo">
+                <img class="logo logo--youtube" src="../home-page/assets/img/yt-logo.png" alt="Youtube logo">
+                <img class="logo logo--instagram" src="../home-page/assets/img/inst-logo.png" alt="Instagram logo">
+            </div>
+        </nav>
     </header>
     <main class="main__container">
         <h1>Aqui va el main</h1>
     </main>
 
     <footer class="footer__container">
-        <p class="footer--text">Copyright© mi equipo 2021</p>
+        <p class="footer__text">Copyright© mi equipo 2021</p>
     </footer>
 </body>
 
