Añadida estructura al header para acomodar el menú hamburguesa

--- a/sitio-web/board-page/index-board.html
+++ b/sitio-web/board-page/index-board.html
@@ -11,18 +11,22 @@
 
 <body class="page__container">
     <header class="header__container">
-        <img class="main-logo" src="../home-page/assets/img/logo.svg" alt="Html & CSS logo"></img>
+        <div class="header__logo__container">
+            <img class="main-logo" src="../home-page/assets/img/logo.svg" alt="Html & CSS logo"></img>
+            <label class="toggle__input" for="toggle__input">&#9776;</label>
+            <input type="checkbox" class="checkbox__button" id="toggle__input">
+        </div>
         <nav class="nav__container">
             <ul class="menu-bar__list">
                 <li><a class="menu-bar__item" href="#">HOME</a></li>
                 <li><a class="menu-bar__item" href="#">BOARD</a></li>
                 <li><a class="menu-bar__item" href="#">CONTACTO</a></li>
             </ul>
-            <div class="logos__container">
-                <img class="logo logo--facebook" src="../home-page/assets/img/fb-logo.png" alt="Facebook logo">
-                <img class="logo logo--twitter" src="../home-page/assets/img/twit-logo.png" alt="Twitter logo">
-                <img class="logo logo--youtube" src="../home-page/assets/img/yt-logo.png" alt="Youtube logo">
-                <img class="logo logo--instagram" src="../home-page/assets/img/inst-logo.png" alt="Instagram logo">
+            <div class="logos__container--social-media">
+                <img class="social-media__logo logo__facebook" src="../home-page/assets/img/fb-logo.png" alt="Facebook logo">
+                <img class="social-media__logo logo__twitter" src="../home-page/assets/img/twit-logo.png" alt="Twitter logo">
+                <img class="social-media__logo logo__youtube" src="../home-page/assets/img/yt-logo.png" alt="Youtube logo">
+                <img class="social-media__logo logo__instagram" src="../home-page/assets/img/inst-logo.png" alt="Instagram logo">
             </div>
         </nav>
     </header>
