--- a/sitio-web/board-page/index-board.html
+++ b/sitio-web/board-page/index-board.html
@@ -31,7 +31,84 @@
         </nav>
     </header>
     <main class="main__container">
-        <h1>Aqui va el main</h1>
+        <div class="chess-board__container">
+            <label>¿Quieres jugar con fichas negras? <input type="checkbox" class="chess-board__color--picker"></label>
+            <div class="chess-board__frame">
+                <div class="chess-board">
+                    <div class="chess-board__cell white--cell">♜</div>
+                    <div class="chess-board__cell black--cell">♟</div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell">♙</div>
+                    <div class="chess-board__cell black--cell">♖</div>
+                    <!-- row2 -->
+                    <div class="chess-board__cell white--cell">♞</div>
+                    <div class="chess-board__cell black--cell">♟</div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell">♙</div>
+                    <div class="chess-board__cell black--cell">♘</div>
+                    <!-- row3 -->
+                    <div class="chess-board__cell white--cell">♗</div>
+                    <div class="chess-board__cell black--cell">♟</div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell">♙</div>
+                    <div class="chess-board__cell black--cell">♗</div>
+                    <!-- row4 -->
+                    <div class="chess-board__cell white--cell">♚</div>
+                    <div class="chess-board__cell black--cell">♟</div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell">♙</div>
+                    <div class="chess-board__cell black--cell">♔</div>
+                    <!-- row5 -->
+                    <div class="chess-board__cell white--cell">♛</div>
+                    <div class="chess-board__cell black--cell">♟</div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell">♙</div>
+                    <div class="chess-board__cell black--cell">♕</div>
+                    <!-- row6 -->
+                    <div class="chess-board__cell white--cell">♝</div>
+                    <div class="chess-board__cell black--cell">♟</div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell">♙</div>
+                    <div class="chess-board__cell black--cell">♗</div>
+                    <!-- row7 -->
+                    <div class="chess-board__cell white--cell">♞</div>
+                    <div class="chess-board__cell black--cell">♟</div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell">♙</div>
+                    <div class="chess-board__cell black--cell">♘</div>
+                    <!-- row8 -->
+                    <div class="chess-board__cell white--cell">♜</div>
+                    <div class="chess-board__cell black--cell">♟</div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell">♙</div>
+                    <div class="chess-board__cell black--cell">♖</div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer__container">
