--- a/sitio-web/board-page/index-board.html
+++ b/sitio-web/board-page/index-board.html
@@ -36,76 +36,76 @@
             <div class="chess-board__frame">
                 <div class="chess-board">
                     <div class="chess-board__cell white--cell">♜</div>
-                    <div class="chess-board__cell black--cell">♟</div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell">♙</div>
-                    <div class="chess-board__cell black--cell">♖</div>
-                    <!-- row2 -->
-                    <div class="chess-board__cell white--cell">♞</div>
-                    <div class="chess-board__cell black--cell">♟</div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell">♙</div>
-                    <div class="chess-board__cell black--cell">♘</div>
-                    <!-- row3 -->
-                    <div class="chess-board__cell white--cell">♗</div>
-                    <div class="chess-board__cell black--cell">♟</div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell">♙</div>
-                    <div class="chess-board__cell black--cell">♗</div>
-                    <!-- row4 -->
-                    <div class="chess-board__cell white--cell">♚</div>
-                    <div class="chess-board__cell black--cell">♟</div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell">♙</div>
-                    <div class="chess-board__cell black--cell">♔</div>
-                    <!-- row5 -->
-                    <div class="chess-board__cell white--cell">♛</div>
-                    <div class="chess-board__cell black--cell">♟</div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell">♙</div>
-                    <div class="chess-board__cell black--cell">♕</div>
-                    <!-- row6 -->
+                    <div class="chess-board__cell black--cell">♞</div>
                     <div class="chess-board__cell white--cell">♝</div>
-                    <div class="chess-board__cell black--cell">♟</div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell">♙</div>
-                    <div class="chess-board__cell black--cell">♗</div>
-                    <!-- row7 -->
+                    <div class="chess-board__cell black--cell">♚</div>
+                    <div class="chess-board__cell white--cell">♛</div>
+                    <div class="chess-board__cell black--cell">♝</div>
                     <div class="chess-board__cell white--cell">♞</div>
+                    <div class="chess-board__cell black--cell">♜</div>
+                    <!-- row2 -->
                     <div class="chess-board__cell black--cell">♟</div>
+                    <div class="chess-board__cell white--cell">♟</div>
+                    <div class="chess-board__cell black--cell">♟</div>
+                    <div class="chess-board__cell white--cell">♟</div>
+                    <div class="chess-board__cell black--cell">♟</div>
+                    <div class="chess-board__cell white--cell">♟</div>
+                    <div class="chess-board__cell black--cell">♟</div>
+                    <div class="chess-board__cell white--cell">♟</div>
+                    <!-- row3 -->
                     <div class="chess-board__cell white--cell"></div>
                     <div class="chess-board__cell black--cell"></div>
                     <div class="chess-board__cell white--cell"></div>
                     <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <!-- row4 -->
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <!-- row5 -->
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <!-- row6 -->
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <div class="chess-board__cell black--cell"></div>
+                    <div class="chess-board__cell white--cell"></div>
+                    <!-- row7 -->
                     <div class="chess-board__cell white--cell">♙</div>
-                    <div class="chess-board__cell black--cell">♘</div>
+                    <div class="chess-board__cell black--cell">♙</div>
+                    <div class="chess-board__cell white--cell">♙</div>
+                    <div class="chess-board__cell black--cell">♙</div>
+                    <div class="chess-board__cell white--cell">♙</div>
+                    <div class="chess-board__cell black--cell">♙</div>
+                    <div class="chess-board__cell white--cell">♙</div>
+                    <div class="chess-board__cell black--cell">♙</div>
                     <!-- row8 -->
-                    <div class="chess-board__cell white--cell">♜</div>
-                    <div class="chess-board__cell black--cell">♟</div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell">♙</div>
                     <div class="chess-board__cell black--cell">♖</div>
+                    <div class="chess-board__cell white--cell">♘</div>
+                    <div class="chess-board__cell black--cell">♗</div>
+                    <div class="chess-board__cell white--cell">♔</div>
+                    <div class="chess-board__cell black--cell">♕</div>
+                    <div class="chess-board__cell white--cell">♗</div>
+                    <div class="chess-board__cell black--cell">♘</div>
+                    <div class="chess-board__cell white--cell">♖</div>
                 </div>
             </div>
         </div>
