--- a/sitio-web/board-page/index-board.html
+++ b/sitio-web/board-page/index-board.html
@@ -32,8 +32,8 @@
     </header>
     <main class="main__container">
         <div class="chess-board__container">
-            <label>¿Quieres jugar con fichas negras? <input type="checkbox" class="chess-board__color--picker"></label>
-            <div class="chess-board__frame">
+            <label>¿Quieres jugar con fichas negras?</label>
+            <input type="checkbox" class="chess-board__color--picker__input">
                 <div class="chess-board">
                     <div class="chess-board__cell white--cell">♜</div>
                     <div class="chess-board__cell black--cell">♞</div>
@@ -108,7 +108,7 @@
                     <div class="chess-board__cell white--cell">♖</div>
                 </div>
             </div>
-        </div>
+
     </main>
 
     <footer class="footer__container">
