--- a/sitio-web/board-page/index-board.html
+++ b/sitio-web/board-page/index-board.html
@@ -23,91 +23,94 @@
                 <li><a class="menu-bar__item" href="#">CONTACTO</a></li>
             </ul>
             <div class="logos__container--social-media">
-                <img class="social-media__logo logo__facebook" src="../home-page/assets/img/fb-logo.png" alt="Facebook logo">
-                <img class="social-media__logo logo__twitter" src="../home-page/assets/img/twit-logo.png" alt="Twitter logo">
-                <img class="social-media__logo logo__youtube" src="../home-page/assets/img/yt-logo.png" alt="Youtube logo">
-                <img class="social-media__logo logo__instagram" src="../home-page/assets/img/inst-logo.png" alt="Instagram logo">
+                <img class="social-media__logo logo__facebook" src="../home-page/assets/img/fb-logo.png"
+                    alt="Facebook logo">
+                <img class="social-media__logo logo__twitter" src="../home-page/assets/img/twit-logo.png"
+                    alt="Twitter logo">
+                <img class="social-media__logo logo__youtube" src="../home-page/assets/img/yt-logo.png"
+                    alt="Youtube logo">
+                <img class="social-media__logo logo__instagram" src="../home-page/assets/img/inst-logo.png"
+                    alt="Instagram logo">
             </div>
         </nav>
     </header>
     <main class="main__container">
-        <div class="chess-board__container">
-            <label>¿Quieres jugar con fichas negras?</label>
-            <input type="checkbox" class="chess-board__color--picker__input">
-                <div class="chess-board">
-                    <div class="chess-board__cell white--cell">♜</div>
-                    <div class="chess-board__cell black--cell">♞</div>
-                    <div class="chess-board__cell white--cell">♝</div>
-                    <div class="chess-board__cell black--cell">♚</div>
-                    <div class="chess-board__cell white--cell">♛</div>
-                    <div class="chess-board__cell black--cell">♝</div>
-                    <div class="chess-board__cell white--cell">♞</div>
-                    <div class="chess-board__cell black--cell">♜</div>
-                    <!-- row2 -->
-                    <div class="chess-board__cell black--cell">♟</div>
-                    <div class="chess-board__cell white--cell">♟</div>
-                    <div class="chess-board__cell black--cell">♟</div>
-                    <div class="chess-board__cell white--cell">♟</div>
-                    <div class="chess-board__cell black--cell">♟</div>
-                    <div class="chess-board__cell white--cell">♟</div>
-                    <div class="chess-board__cell black--cell">♟</div>
-                    <div class="chess-board__cell white--cell">♟</div>
-                    <!-- row3 -->
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <!-- row4 -->
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <!-- row5 -->
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <!-- row6 -->
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <div class="chess-board__cell black--cell"></div>
-                    <div class="chess-board__cell white--cell"></div>
-                    <!-- row7 -->
-                    <div class="chess-board__cell white--cell">♙</div>
-                    <div class="chess-board__cell black--cell">♙</div>
-                    <div class="chess-board__cell white--cell">♙</div>
-                    <div class="chess-board__cell black--cell">♙</div>
-                    <div class="chess-board__cell white--cell">♙</div>
-                    <div class="chess-board__cell black--cell">♙</div>
-                    <div class="chess-board__cell white--cell">♙</div>
-                    <div class="chess-board__cell black--cell">♙</div>
-                    <!-- row8 -->
-                    <div class="chess-board__cell black--cell">♖</div>
-                    <div class="chess-board__cell white--cell">♘</div>
-                    <div class="chess-board__cell black--cell">♗</div>
-                    <div class="chess-board__cell white--cell">♔</div>
-                    <div class="chess-board__cell black--cell">♕</div>
-                    <div class="chess-board__cell white--cell">♗</div>
-                    <div class="chess-board__cell black--cell">♘</div>
-                    <div class="chess-board__cell white--cell">♖</div>
-                </div>
-            </div>
+        <label for="input__color--picker" class="chess-board__color--picker__label">¿Quieres jugar con fichas
+            negras?</label>
+        <input id="input__color--picker" type="checkbox" class="chess-board__color--picker__input hidden__input">
+        <div class="chess-board">
+            <div class="chess-board__cell white--cell">♜</div>
+            <div class="chess-board__cell black--cell">♞</div>
+            <div class="chess-board__cell white--cell">♝</div>
+            <div class="chess-board__cell black--cell">♚</div>
+            <div class="chess-board__cell white--cell">♛</div>
+            <div class="chess-board__cell black--cell">♝</div>
+            <div class="chess-board__cell white--cell">♞</div>
+            <div class="chess-board__cell black--cell">♜</div>
+
+            <div class="chess-board__cell black--cell">♟</div>
+            <div class="chess-board__cell white--cell">♟</div>
+            <div class="chess-board__cell black--cell">♟</div>
+            <div class="chess-board__cell white--cell">♟</div>
+            <div class="chess-board__cell black--cell">♟</div>
+            <div class="chess-board__cell white--cell">♟</div>
+            <div class="chess-board__cell black--cell">♟</div>
+            <div class="chess-board__cell white--cell">♟</div>
+
+            <div class="chess-board__cell white--cell"></div>
+            <div class="chess-board__cell black--cell"></div>
+            <div class="chess-board__cell white--cell"></div>
+            <div class="chess-board__cell black--cell"></div>
+            <div class="chess-board__cell white--cell"></div>
+            <div class="chess-board__cell black--cell"></div>
+            <div class="chess-board__cell white--cell"></div>
+            <div class="chess-board__cell black--cell"></div>
+
+            <div class="chess-board__cell black--cell"></div>
+            <div class="chess-board__cell white--cell"></div>
+            <div class="chess-board__cell black--cell"></div>
+            <div class="chess-board__cell white--cell"></div>
+            <div class="chess-board__cell black--cell"></div>
+            <div class="chess-board__cell white--cell"></div>
+            <div class="chess-board__cell black--cell"></div>
+            <div class="chess-board__cell white--cell"></div>
+
+            <div class="chess-board__cell white--cell"></div>
+            <div class="chess-board__cell black--cell"></div>
+            <div class="chess-board__cell white--cell"></div>
+            <div class="chess-board__cell black--cell"></div>
+            <div class="chess-board__cell white--cell"></div>
+            <div class="chess-board__cell black--cell"></div>
+            <div class="chess-board__cell white--cell"></div>
+            <div class="chess-board__cell black--cell"></div>
+
+            <div class="chess-board__cell black--cell"></div>
+            <div class="chess-board__cell white--cell"></div>
+            <div class="chess-board__cell black--cell"></div>
+            <div class="chess-board__cell white--cell"></div>
+            <div class="chess-board__cell black--cell"></div>
+            <div class="chess-board__cell white--cell"></div>
+            <div class="chess-board__cell black--cell"></div>
+            <div class="chess-board__cell white--cell"></div>
+
+            <div class="chess-board__cell white--cell">♙</div>
+            <div class="chess-board__cell black--cell">♙</div>
+            <div class="chess-board__cell white--cell">♙</div>
+            <div class="chess-board__cell black--cell">♙</div>
+            <div class="chess-board__cell white--cell">♙</div>
+            <div class="chess-board__cell black--cell">♙</div>
+            <div class="chess-board__cell white--cell">♙</div>
+            <div class="chess-board__cell black--cell">♙</div>
+
+            <div class="chess-board__cell black--cell">♖</div>
+            <div class="chess-board__cell white--cell">♘</div>
+            <div class="chess-board__cell black--cell">♗</div>
+            <div class="chess-board__cell white--cell">♔</div>
+            <div class="chess-board__cell black--cell">♕</div>
+            <div class="chess-board__cell white--cell">♗</div>
+            <div class="chess-board__cell black--cell">♘</div>
+            <div class="chess-board__cell white--cell">♖</div>
+        </div>
 
     </main>
 
