--- a/sitio-web/board-page/index-board.html
+++ b/sitio-web/board-page/index-board.html
@@ -38,80 +38,81 @@
         <label for="input__color--picker" class="chess-board__color--picker__label">¿Quieres jugar con fichas
             negras?</label>
         <input id="input__color--picker" type="checkbox" class="chess-board__color--picker__input hidden__input">
-        <div class="chess-board">
-            <div class="chess-board__cell white--cell">♜</div>
-            <div class="chess-board__cell black--cell">♞</div>
-            <div class="chess-board__cell white--cell">♝</div>
-            <div class="chess-board__cell black--cell">♚</div>
-            <div class="chess-board__cell white--cell">♛</div>
-            <div class="chess-board__cell black--cell">♝</div>
-            <div class="chess-board__cell white--cell">♞</div>
-            <div class="chess-board__cell black--cell">♜</div>
+        <div class="chess-board__container">
+            <div class="chess-board">
+                <div class="chess-board__cell white--cell">♜</div>
+                <div class="chess-board__cell black--cell">♞</div>
+                <div class="chess-board__cell white--cell">♝</div>
+                <div class="chess-board__cell black--cell">♚</div>
+                <div class="chess-board__cell white--cell">♛</div>
+                <div class="chess-board__cell black--cell">♝</div>
+                <div class="chess-board__cell white--cell">♞</div>
+                <div class="chess-board__cell black--cell">♜</div>
 
-            <div class="chess-board__cell black--cell">♟</div>
-            <div class="chess-board__cell white--cell">♟</div>
-            <div class="chess-board__cell black--cell">♟</div>
-            <div class="chess-board__cell white--cell">♟</div>
-            <div class="chess-board__cell black--cell">♟</div>
-            <div class="chess-board__cell white--cell">♟</div>
-            <div class="chess-board__cell black--cell">♟</div>
-            <div class="chess-board__cell white--cell">♟</div>
+                <div class="chess-board__cell black--cell">♟</div>
+                <div class="chess-board__cell white--cell">♟</div>
+                <div class="chess-board__cell black--cell">♟</div>
+                <div class="chess-board__cell white--cell">♟</div>
+                <div class="chess-board__cell black--cell">♟</div>
+                <div class="chess-board__cell white--cell">♟</div>
+                <div class="chess-board__cell black--cell">♟</div>
+                <div class="chess-board__cell white--cell">♟</div>
 
-            <div class="chess-board__cell white--cell"></div>
-            <div class="chess-board__cell black--cell"></div>
-            <div class="chess-board__cell white--cell"></div>
-            <div class="chess-board__cell black--cell"></div>
-            <div class="chess-board__cell white--cell"></div>
-            <div class="chess-board__cell black--cell"></div>
-            <div class="chess-board__cell white--cell"></div>
-            <div class="chess-board__cell black--cell"></div>
+                <div class="chess-board__cell white--cell"></div>
+                <div class="chess-board__cell black--cell"></div>
+                <div class="chess-board__cell white--cell"></div>
+                <div class="chess-board__cell black--cell"></div>
+                <div class="chess-board__cell white--cell"></div>
+                <div class="chess-board__cell black--cell"></div>
+                <div class="chess-board__cell white--cell"></div>
+                <div class="chess-board__cell black--cell"></div>
 
-            <div class="chess-board__cell black--cell"></div>
-            <div class="chess-board__cell white--cell"></div>
-            <div class="chess-board__cell black--cell"></div>
-            <div class="chess-board__cell white--cell"></div>
-            <div class="chess-board__cell black--cell"></div>
-            <div class="chess-board__cell white--cell"></div>
-            <div class="chess-board__cell black--cell"></div>
-            <div class="chess-board__cell white--cell"></div>
+                <div class="chess-board__cell black--cell"></div>
+                <div class="chess-board__cell white--cell"></div>
+                <div class="chess-board__cell black--cell"></div>
+                <div class="chess-board__cell white--cell"></div>
+                <div class="chess-board__cell black--cell"></div>
+                <div class="chess-board__cell white--cell"></div>
+                <div class="chess-board__cell black--cell"></div>
+                <div class="chess-board__cell white--cell"></div>
 
-            <div class="chess-board__cell white--cell"></div>
-            <div class="chess-board__cell black--cell"></div>
-            <div class="chess-board__cell white--cell"></div>
-            <div class="chess-board__cell black--cell"></div>
-            <div class="chess-board__cell white--cell"></div>
-            <div class="chess-board__cell black--cell"></div>
-            <div class="chess-board__cell white--cell"></div>
-            <div class="chess-board__cell black--cell"></div>
+                <div class="chess-board__cell white--cell"></div>
+                <div class="chess-board__cell black--cell"></div>
+                <div class="chess-board__cell white--cell"></div>
+                <div class="chess-board__cell black--cell"></div>
+                <div class="chess-board__cell white--cell"></div>
+                <div class="chess-board__cell black--cell"></div>
+                <div class="chess-board__cell white--cell"></div>
+                <div class="chess-board__cell black--cell"></div>
 
-            <div class="chess-board__cell black--cell"></div>
-            <div class="chess-board__cell white--cell"></div>
-            <div class="chess-board__cell black--cell"></div>
-            <div class="chess-board__cell white--cell"></div>
-            <div class="chess-board__cell black--cell"></div>
-            <div class="chess-board__cell white--cell"></div>
-            <div class="chess-board__cell black--cell"></div>
-            <div class="chess-board__cell white--cell"></div>
+                <div class="chess-board__cell black--cell"></div>
+                <div class="chess-board__cell white--cell"></div>
+                <div class="chess-board__cell black--cell"></div>
+                <div class="chess-board__cell white--cell"></div>
+                <div class="chess-board__cell black--cell"></div>
+                <div class="chess-board__cell white--cell"></div>
+                <div class="chess-board__cell black--cell"></div>
+                <div class="chess-board__cell white--cell"></div>
 
-            <div class="chess-board__cell white--cell">♙</div>
-            <div class="chess-board__cell black--cell">♙</div>
-            <div class="chess-board__cell white--cell">♙</div>
-            <div class="chess-board__cell black--cell">♙</div>
-            <div class="chess-board__cell white--cell">♙</div>
-            <div class="chess-board__cell black--cell">♙</div>
-            <div class="chess-board__cell white--cell">♙</div>
-            <div class="chess-board__cell black--cell">♙</div>
+                <div class="chess-board__cell white--cell">♙</div>
+                <div class="chess-board__cell black--cell">♙</div>
+                <div class="chess-board__cell white--cell">♙</div>
+                <div class="chess-board__cell black--cell">♙</div>
+                <div class="chess-board__cell white--cell">♙</div>
+                <div class="chess-board__cell black--cell">♙</div>
+                <div class="chess-board__cell white--cell">♙</div>
+                <div class="chess-board__cell black--cell">♙</div>
 
-            <div class="chess-board__cell black--cell">♖</div>
-            <div class="chess-board__cell white--cell">♘</div>
-            <div class="chess-board__cell black--cell">♗</div>
-            <div class="chess-board__cell white--cell">♔</div>
-            <div class="chess-board__cell black--cell">♕</div>
-            <div class="chess-board__cell white--cell">♗</div>
-            <div class="chess-board__cell black--cell">♘</div>
-            <div class="chess-board__cell white--cell">♖</div>
+                <div class="chess-board__cell black--cell">♖</div>
+                <div class="chess-board__cell white--cell">♘</div>
+                <div class="chess-board__cell black--cell">♗</div>
+                <div class="chess-board__cell white--cell">♔</div>
+                <div class="chess-board__cell black--cell">♕</div>
+                <div class="chess-board__cell white--cell">♗</div>
+                <div class="chess-board__cell black--cell">♘</div>
+                <div class="chess-board__cell white--cell">♖</div>
+            </div>
         </div>
-
     </main>
 
     <footer class="footer__container">
