Añadido el link a home en el menú de navegación

--- a/sitio-web/board-page/index-board.html
+++ b/sitio-web/board-page/index-board.html
@@ -16,7 +16,7 @@
         <input type="checkbox" class="checkbox__button" id="toggle__input">
         <nav class="nav__container">
             <ul class="menu-bar__list">
-                <li><a class="menu-bar__item" href="#">HOME</a></li>
+                <li><a class="menu-bar__item" href="..//home-page/assets/index.html">HOME</a></li>
                 <li><a class="menu-bar__item" href="../board-page/index-board.html">BOARD</a></li>
                 <li><a class="menu-bar__item" href="../contact-page/index-contact.html">CONTACTO</a></li>
             </ul>
