--- a/sitio-web/home-page/assets/index.html
+++ b/sitio-web/home-page/assets/index.html
@@ -11,27 +11,39 @@
 </head>
 
 <body class="page__container">
-    <!-- HEADER -->
-    <header class="header__container">
-        <div class="header__logo__container">
-            <img class="main-logo" src="./assets/img/logo.svg" alt="Html & CSS logo"></img>
-            <label class="toggle__input" for="toggle__input">&#9776;</label>
-            <input type="checkbox" class="checkbox__button" id="toggle__input">
-        </div>
-        <nav class="nav__container">
-            <ul class="menu-bar__list">
-                <li><a class="menu-bar__item" href="#">HOME</a></li>
-                <li><a class="menu-bar__item" href="#">BOARD</a></li>
-                <li><a class="menu-bar__item" href="#">CONTACTO</a></li>
-            </ul>
+<!-- HEADER -->
+<header class="header__container">
+    <img class="main-logo" src="./assets/img/logo.svg" alt="Html & CSS logo"></img>
+    <label class="toggle__input" for="toggle__input">&#9776;</label>
+    <input type="checkbox" class="checkbox__button" id="toggle__input">
+    <nav class="nav__container">
+        <ul class="menu-bar__list">
+            <li><a class="menu-bar__item" href="#">HOME</a></li>
+            <li><a class="menu-bar__item" href="../board-page/index-board.html">BOARD</a></li>
+            <li><a class="menu-bar__item" href="../contact-page/index-contact.html">CONTACTO</a></li>
+        </ul>
+        <div class="logos__container--aligner">
             <div class="logos__container--social-media">
-                <img class="social-media__logo logo__facebook" src="./assets/img/fb-logo.png" alt="Facebook logo">
-                <img class="social-media__logo logo__twitter" src="./assets/img/twit-logo.png" alt="Twitter logo">
-                <img class="social-media__logo logo__youtube" src="./assets/img/yt-logo.png" alt="Youtube logo">
-                <img class="social-media__logo logo__instagram" src="./assets/img/inst-logo.png" alt="Instagram logo">
+                <a href="https://www.facebook.com/">
+                <img class="social-media__logo logo__facebook" src="./assets/img/fb-logo.png"
+                    alt="Facebook logo">
+                </a>
+                <a href="https://www.twitter.com/">
+                <img class="social-media__logo logo__twitter" href="https://www.twitter.com/" src="./assets/img/twit-logo.png"
+                    alt="Twitter logo">
+                    </a>
+                    <a href="https://www.youtube.com/">
+                <img class="social-media__logo logo__youtube" href="https://www.youtube.com/" src="./assets/img/yt-logo.png"
+                    alt="Youtube logo">
+                </a>
+                <a href="https://www.instagram.com/">
+                <img class="social-media__logo logo__instagram" src="./assets/img/inst-logo.png"
+                    alt="Instagram logo">
+                    </a>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+</header>
     <!-- MAIN BANNER -->
     <div class="banner__container">
         <video class="banner__video" autoplay muted loop playsinline id="main__banner--video">
@@ -43,17 +55,44 @@
         </div>
     </div>
     <!-- FLIP-CARDS -->
-    <section class="cards__container">
+    <section class="section__cards--container">
         <h1 class="cards__container--title">Lugares del mundo</h1>
-        <div class="card">
+        <div class="cards__container">
+            <!-- MOUNTAIN-CARD -->
+
             <div class="card__inner">
-                <div class="card__front">
+                <div class="card__faces card__front">
                     <h3 class="card__front--title">MOUNTAIN</h3>
                 </div>
-                <div class="card__back">
+                <div class="card__faces  card__back">
                     <h3 class="card__back--title">MOUNTAIN</h3>
                     <p class="card__back--description">Encuentra tu próximo destino en los pirineos Catalanes y
                         Aragoneses.</p>
+                </div>
+            </div>
+
+            <!-- LAKE-CARD -->
+
+            <div class="card__inner">
+                <div class="card__faces card__front card__front--lake">
+                    <h3 class="card__front--title">LAKE</h3>
+                </div>
+                <div class="card__faces  card__back">
+                    <h3 class="card__back--title">LAKE</h3>
+                    <p class="card__back--description">Descubre los lagos glaciares de Españaen el Parque Nacional de los Picos de Europa.</p>
+                </div>
+            </div>
+
+            <!-- OCEAN-CARD -->
+            <div class="card__inner">
+                <div class="card__faces card__front card__front--ocean">
+                    <h3 class="card__front--title">OCEAN</h3>
+                </div>
+                <div class="card__faces  card__back">
+                    <h3 class="card__back--title">OCEAN</h3>
+                    <p class="card__back--description">El océano Atlántico que rodea a España dan lugar a algunas de
+                        las
+                        playas más bonitas que existen. </p>
                 </div>
             </div>
         </div>
@@ -67,11 +106,13 @@
         <div class="pricing__card--container">
             <!-- BRONZE CARD -->
             <div class="pricing__card ">
-                <h3 class="pricing__card--title">Bronze Package</h3>
-                <div class="price__box">
-                    <p class="price__box dolar">$</p>
-                    <p class="price__box price">10</p>
-                    <p class="price__box month">Month</p>
+                <div class="price__card--header">
+                    <h3 class="pricing__card--title">Bronze Package</h3>
+                    <div class="price__box">
+                        <p class="price__box dolar">$</p>
+                        <p class="price__box price">10</p>
+                        <p class="price__box month">Month</p>
+                    </div>
                 </div>
                 <div class="feature__box">
                     <div class="feature__line">
@@ -87,18 +128,20 @@
                         <p class="feature__box--description">Approve Reviews</p>
                     </div>
                 </div>
-                <button class="pricing__button--green">Get Started Now</button>
+                <button class="pricing__button--green" type="button">Get Started Now</button>
             </div>
             <!-- GOLD CARD -->
             <div class="pricing__card">
                 <div class="circle__container">
                     <p class="cicle__text">MOST POPULAR</p>
                 </div>
-                <h3 class="pricing__card--title">Gold Package</h3>
-                <div class="price__box">
-                    <p class="price__box dolar">$</p>
-                    <p class="price__box price">19</p>
-                    <p class="price__box month">Month</p>
+                <div class="price__card--header">
+                    <h3 class="pricing__card--title">Gold Package</h3>
+                    <div class="price__box">
+                        <p class="price__box dolar">$</p>
+                        <p class="price__box price">19</p>
+                        <p class="price__box month">Month</p>
+                    </div>
                 </div>
                 <div class="feature__box">
                     <div class="feature__line">
@@ -122,15 +165,17 @@
                         <p class="feature__box--description">24/7 Support Service</p>
                     </div>
                 </div>
-                <button class="pricing__button--green">Get Started Now</button>
+                <button class="pricing__button--green" type="button">Get Started Now</button>
             </div>
             <!-- PLATINIUM CARD -->
             <div class="pricing__card ">
-                <h3 class="pricing__card--title">Platinum Package</h3>
-                <div class="price__box">
-                    <p class="price__box dolar">$</p>
-                    <p class="price__box price">49</p>
-                    <p class="price__box month">Month</p>
+                <div class="price__card--header">
+                    <h3 class="pricing__card--title">Platinum Package</h3>
+                    <div class="price__box">
+                        <p class="price__box dolar">$</p>
+                        <p class="price__box price">49</p>
+                        <p class="price__box month">Month</p>
+                    </div>
                 </div>
                 <div class="feature__box">
                     <div class="feature__line">
@@ -146,7 +191,7 @@
                         <p class="feature__box--description">Approve Reviews</p>
                     </div>
                 </div>
-                <button class="pricing__button--green">Get Started Now</button>
+                <button class="pricing__button--green" type="button">Get Started Now</button>
             </div>
 
         </div>
