Menú hamburguesa con icono (X) de cerrado añadido

--- a/sitio-web/board-page/index-board.html
+++ b/sitio-web/board-page/index-board.html
@@ -12,8 +12,9 @@
 <body class="page__container">
     <header class="header__container">
         <img class="main-logo" src="../home-page/assets/img/logo.svg" alt="Html & CSS logo"></img>
-        <label class="toggle__input" for="toggle__input">&#9776;</label>
         <input type="checkbox" class="checkbox__button" id="toggle__input">
+        <label class="toggle__input toggle__input--open" for="toggle__input">&#9776;</label>
+        <label class="toggle__input toggle__input--close" for="toggle__input">&#120299;</label>
         <nav class="nav__container">
             <ul class="menu-bar__list">
                 <li><a class="menu-bar__item" href="../home-page/assets/index.html">HOME</a></li>
