--- a/sitio-web/board-page/index-board.html
+++ b/sitio-web/board-page/index-board.html
@@ -42,6 +42,33 @@
                 </div>
             </div>
         </nav>
+        <nav class="nav__container--desktop">
+            <ul class="menu-bar__list">
+                <li><a class="menu-bar__item" href="../home-page/assets/index.html">HOME</a></li>
+                <li><a class="menu-bar__item" href="./index-board.html">BOARD</a></li>
+                <li><a class="menu-bar__item" href="../contact-page/index-contact.html">CONTACTO</a></li>
+            </ul>
+            <div class="logos__container--aligner">
+                <div class="logos__container--social-media">
+                    <a href="https://www.facebook.com/">
+                    <img class="social-media__logo logo__facebook" src="../home-page/assets/img/fb-logo.png"
+                        alt="Facebook logo">
+                    </a>
+                    <a href="https://www.twitter.com/">
+                    <img class="social-media__logo logo__twitter" href="https://www.twitter.com/" src="../home-page/assets/img/twit-logo.png"
+                        alt="Twitter logo">
+                        </a>
+                        <a href="https://www.youtube.com/">
+                    <img class="social-media__logo logo__youtube" href="https://www.youtube.com/" src="../home-page/assets/img/yt-logo.png"
+                        alt="Youtube logo">
+                    </a>
+                    <a href="https://www.instagram.com/">
+                    <img class="social-media__logo logo__instagram" src="../home-page/assets/img/inst-logo.png"
+                        alt="Instagram logo">
+                        </a>
+                </div>
+            </div>
+        </nav>
     </header>
     <main class="main__container">
         <label for="input__color--picker" class="chess-board__color--picker__label">¿Quieres jugar con fichas
