Ultimos retoques hechos. Falta header y footer

--- a/sitio-web/contact-page/index-contact.html
+++ b/sitio-web/contact-page/index-contact.html
@@ -38,13 +38,13 @@
         <p>¿Recomendarías esta página a un conocido?</p>
             <div class="seleccionar">
                 <label for="yes">Definitivamente sí</label>
-                <input type="radio" name="recomendacion" id="yes">
+                <input type="radio" name="recomendacion" id="yes" class="color__change">
         
                 <label for="maybe">Quizás</label>
-                <input type="radio" name="recomendacion" id="maybe">
+                <input type="radio" name="recomendacion" id="maybe" class="color__change">
                             
                 <label for="not-sure">No estoy seguro</label>
-                <input type="radio" name="recomendacion" id="not-sure">
+                <input type="radio" name="recomendacion" id="not-sure" class="color__change">
             </div>
         </div>           
         <p>¿Qué recomendaciones te gustaría recibir? (Marca todas las que apliquen)</p>
