--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <nav class="nav__container">
             <ul class="menu-bar__list">
                 <li><a class="menu-bar__item" href="index.html">HOME</a></li>
-                <li><a class="menu-bar__item" href="../sitio-web/board-page/index-board.html">BOARD</a></li>
-                <li><a class="menu-bar__item" href="../sitio-web/contact-page/index-contact.html">CONTACTO</a></li>
+                <li><a class="menu-bar__item" href="../practica-1/sitio-web/board-page/index-board.html">BOARD</a></li>
+                <li><a class="menu-bar__item" href="../practica-1/sitio-web/contact-page/index-contact.html">CONTACTO</a></li>
             </ul>
             <div class="logos__container--aligner">
                 <div class="logos__container--social-media">
@@ -46,9 +46,9 @@
         </nav>
         <nav class="nav__container--desktop">
             <ul class="menu-bar__list">
-                <li><a class="menu-bar__item" href="/sitio-web/home-page/assets/index.html">HOME</a></li>
-                <li><a class="menu-bar__item" href="/sitio-web/board-page/index-board.html">BOARD</a></li>
-                <li><a class="menu-bar__item" href="/sitio-web/contact-page/index-contact.html">CONTACTO</a></li>
+                <li><a class="menu-bar__item" href="index.html">HOME</a></li>
+                <li><a class="menu-bar__item" href="../practica-1/sitio-web/board-page/index-board.html">BOARD</a></li>
+                <li><a class="menu-bar__item" href="../practica-1/sitio-web/contact-page/index-contact.html">CONTACTO</a></li>
             </ul>
             <div class="logos__container--aligner">
                 <div class="logos__container--social-media">
